{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 15,
  "lineage": "7453ed57-759b-3b30-8948-b4c7d2fd8bec",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:384600248231:internet-gateway/igw-06c648bcf0982c626",
            "id": "igw-06c648bcf0982c626",
            "owner_id": "384600248231",
            "tags": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d97828e97f62cccb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06c648bcf0982c626",
            "id": "r-rtb-0e9a15cdf14364fef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e9a15cdf14364fef",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:384600248231:route-table/rtb-0804790daef831d55",
            "id": "rtb-0804790daef831d55",
            "owner_id": "384600248231",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d97828e97f62cccb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:384600248231:route-table/rtb-0442e6b0a8fbdcd84",
            "id": "rtb-0442e6b0a8fbdcd84",
            "owner_id": "384600248231",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d97828e97f62cccb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:384600248231:route-table/rtb-0e9a15cdf14364fef",
            "id": "rtb-0e9a15cdf14364fef",
            "owner_id": "384600248231",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d97828e97f62cccb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00126bc781dd9c210",
            "route_table_id": "rtb-0804790daef831d55",
            "subnet_id": "subnet-00bbdb7e9899dbc02"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb9d06d221538e6e",
            "route_table_id": "rtb-0442e6b0a8fbdcd84",
            "subnet_id": "subnet-0d4e29bd039010058"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b0adcfae375d542",
            "route_table_id": "rtb-0e9a15cdf14364fef",
            "subnet_id": "subnet-0169f3569129eada6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0461144dcda472fc4",
            "route_table_id": "rtb-0e9a15cdf14364fef",
            "subnet_id": "subnet-0fb22d5b749a3b49a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:384600248231:subnet/subnet-00bbdb7e9899dbc02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bbdb7e9899dbc02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384600248231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d97828e97f62cccb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:384600248231:subnet/subnet-0d4e29bd039010058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.200.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4e29bd039010058",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384600248231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d97828e97f62cccb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:384600248231:subnet/subnet-0169f3569129eada6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.200.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0169f3569129eada6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384600248231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d97828e97f62cccb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:384600248231:subnet/subnet-0fb22d5b749a3b49a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.200.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb22d5b749a3b49a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384600248231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d97828e97f62cccb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:384600248231:vpc/vpc-0d97828e97f62cccb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-0d028ea61c17c128b",
            "default_route_table_id": "rtb-0f023d664609b76d4",
            "default_security_group_id": "sg-0834448f959d91779",
            "dhcp_options_id": "dopt-a0dca4d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d97828e97f62cccb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f023d664609b76d4",
            "owner_id": "384600248231",
            "tags": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Proof of Concept",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}